--- a/.github/workflows/matrix-configuration.yaml
+++ b/.github/workflows/matrix-configuration.yaml
@@ -1,23 +1,24 @@
-name: Matric Configuration
+name: Matrix Configuration
+
 on:
- push:
-   workflow_dispatch:
+  push:
+  workflow_dispatch:
 
 jobs:
-    deploy-on-ubuntu:
-       run-on: ubuntu-lastest
-   
+  deploy-on-ubuntu:
+    runs-on: ubuntu-latest  # Fixed: Correct key name and value
     steps:
-     - name: echo docker details
-       run: docker info
+      - name: Echo Docker details
+        run: docker info
 
-     - name: run images
-       run: docker run hello-world
+      - name: Run Docker image
+        run: docker run hello-world
 
-    deploy-on-windows:
-      run: windows-latest
-      steps:
-       - name: echo docker details
-         run: docker info
-       - name: run images
-         run: docker run hello-world
+  deploy-on-windows:
+    runs-on: windows-latest  # Fixed: Added missing `runs-on` key
+    steps:
+      - name: Echo Docker details
+        run: docker info
+
+      - name: Run Docker image
+        run: docker run hello-world
