--- a/.github/workflows/matrix-configuration.yaml
+++ b/.github/workflows/matrix-configuration.yaml
@@ -5,20 +5,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy-on-ubuntu:
-    runs-on: ubuntu-latest  # Fixed: Correct key name and value
+    deploy:
+     strategy:
+        matrix:
+           os: [ubuntu-latest,ubuntu-24.04, windows-latest]
+           images: [hello-world, alpine]
+     runs-on: ${{matrix.os}}
+        
     steps:
       - name: Echo Docker details
         run: docker info
 
-      - name: Run Docker image
-        run: docker run hello-world
-
-  deploy-on-windows:
-    runs-on: windows-latest  # Fixed: Added missing `runs-on` key
-    steps:
-      - name: Echo Docker details
-        run: docker info
-
-      - name: Run Docker image
-        run: docker run hello-world
+      - name: Run  image on ${{matrix.os}}
+        run: docker run ${{matrix.images}}
