--- a/.github/workflows/matrix-configuration.yaml
+++ b/.github/workflows/matrix-configuration.yaml
@@ -7,9 +7,17 @@ on:
 jobs:
   deploy:
     strategy:
+      fail-fast: false
+      max-parallel: 2
       matrix:
         os: [ubuntu-latest, ubuntu-24.04, windows-latest]
         images: [hello-world, alpine]
+        exclude:
+          - image: alpine
+            os: windows-latest
+        include:
+          - image: amd64/alpine
+            os: ubuntu-24.04
     runs-on: ${{ matrix.os }}
 
     steps:
